Coverity analysis defect 121401: Uninitialized scalar variable

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.12
    • Affects Version/s: None
    • Component/s: None
    • Server Security
    • Fully Compatible
    • ALL
    • v8.0, v7.0
    • Security 2024-11-11, Security 2024-11-25, Security 2024-12-09, Security 2024-12-23, Security 2025-01-20
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized scalar variable

      The variable will contain an arbitrary value left from earlier computations. Use of an uninitialized variable
      /data/bazel_cache/1de52aaeb35278243ca29a4785ce7969/execroot/_main_/src/mongo/db/modules/enterprise/src/encryptdb/symmetric_crypto_smoke.cpp:113: UNINIT 121401 Declaring variable "pt" without initializer.
      /data/bazel_cache/1de52aaeb35278243ca29a4785ce7969/execroot/_main_/src/mongo/db/modules/enterprise/src/encryptdb/symmetric_crypto_smoke.cpp:205: UNINIT 121401 Using uninitialized value "*pt" when calling "memcmp".

            Assignee:
            Varun Ravichandran
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: