SERVER-96662 Initialize output buffers in AES cipher smoke test (#30597)